--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body class="login-page">
     <div class="login-container">
-        <h2>Enter Your 4-Digit Birth Year</h2>
+        <h2>What year were you born in??</h2>
         <form method="POST" id="login-form">
             <div class="otp-input">
                 <input type="text" maxlength="1" class="otp" required autofocus>
